# axum-metrics-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: push.yaml
examples/: code_test.rs
kube/: Pulumi.yaml  README.md  index.ts  package-lock.json  package.json
manifest/: kube.yaml
src/: _otameshi.rs  main.rs
src/handlers/: postgres.rs
src/services/: hello.rs
