[package]
name = "axum-metrics-rs"
version = "0.3.0"
edition = "2021"

[features]
default = []


[dependencies]
##### web #####
axum = { version = "0.4.5", features = ["default"] }
axum-extra = "0.1.2"
tokio = { version = "1.16.1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }

#### metrics #####
metrics = "^0.18.0"
metrics-util = { version = "^0.12.0", default-features = false, features = [
    "recency",
    "registry",
    "summary",
] }
metrics-exporter-prometheus = "0.9.0"

##### tracing #####
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

##### sqlx ######
sqlx = { version = "0.5.11", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
] }

##### other #####
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
# structopt = "0.3.22"
# thiserror = "1.0.23"
# log = "0.4.5"
# env_logger = "0.9.0"
anyhow = "1.0.51"
quanta = { version = "0.9.3", default-features = false }
rand = "0.8.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
